fix: restore cluster

--- a/cluster/core/rook-ceph/operator/cluster-external.yaml
+++ b/cluster/core/rook-ceph/operator/cluster-external.yaml
@@ -18,8 +18,8 @@ spec:
         disabled: false
         interval: 45s
   # optionally, the ceph-mgr IP address can be passed to gather metric from the prometheus exporter
-  monitoring:
-    enabled: true
+  # monitoring:
+  #   enabled: true
   #   rulesNamespace: rook-ceph
   #   externalMgrEndpoints:
   #     - ip: "10.1.5.201"
