--- a/cluster/apps/kasten-io/k10/kustomization.yaml
+++ b/cluster/apps/kasten-io/k10/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - helm-release.yaml
-  - monitoring
+  # - monitoring
   # - blueprints
-  - profiles
+  # - profiles
   # - policies
