fix: restore cluster

--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -5,10 +5,10 @@ resources:
   - cert-manager
   - default
   - flux-system
-  # - home
+  - home
   - kasten-io
   - kube-system
-  # - media
+  - media
   - monitoring
   - networking
   - rook-ceph
