--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -3,18 +3,18 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - lidarr
-  - media-browser
-  - overseerr
-  - plex
-  - prowlarr
-  - qbittorrent
-  - radarr
-  - radarr-uhd
-  - readarr
-  - sabnzbd
-  - sonarr
-  - sonarr-uhd
-  - tautulli
-  - trash-updater
-  - unpackerr
+  # - media-browser
+  # - overseerr
+  # - plex
+  # - prowlarr
+  # - qbittorrent
+  # - radarr
+  # - radarr-uhd
+  # - readarr
+  # - sabnzbd
+  # - sonarr
+  # - sonarr-uhd
+  # - tautulli
+  # - trash-updater
+  # - unpackerr
   # - youtubedl-material
