--- a/cluster/apps/media/lidarr/helm-release.yaml
+++ b/cluster/apps/media/lidarr/helm-release.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: lidarr
-      version: 14.1.2
+      version: 14.0.1
       sourceRef:
         kind: HelmRepository
         name: k8s-at-home-charts
@@ -20,7 +20,7 @@ spec:
   values:
     image:
       repository: ghcr.io/k8s-at-home/lidarr-nightly
-      tag: v1.0.0.2569
+      tag: v1.0.0.2550
     env:
       TZ: "${TIMEZONE}"
     ingress:
@@ -46,18 +46,18 @@ spec:
     metrics:
       enabled: true
       serviceMonitor:
-        interval: 5m
+        interval: 3m
         scrapeTimeout: 1m
       prometheusRule:
-        enabled: false
-      # exporter:
-      #   image:
-      #     repository: ghcr.io/onedr0p/exportarr
-      #     tag: v1.0.0
-      #   env:
-      #     port: 9794
-      #     additionalMetrics: true
-      #     unknownQueueItems: true
+        enabled: true
+      exporter:
+        image:
+          repository: ghcr.io/onedr0p/exportarr
+          tag: v1.0.0
+        env:
+          port: 9794
+          additionalMetrics: true
+          unknownQueueItems: true
     persistence:
       config:
         enabled: true
@@ -76,7 +76,7 @@ spec:
         readOnly: false
     resources:
       requests:
-        cpu: 100m
         memory: 250Mi
+        cpu: 500m
       limits:
         memory: 2000Mi
