--- a/cluster/apps/media/lidarr/helm-release.yaml
+++ b/cluster/apps/media/lidarr/helm-release.yaml
@@ -48,16 +48,16 @@ spec:
       serviceMonitor:
         interval: 3m
         scrapeTimeout: 1m
-      prometheusRule:
-        enabled: true
-      exporter:
-        image:
-          repository: ghcr.io/onedr0p/exportarr
-          tag: v1.0.0
-        env:
-          port: 9794
-          additionalMetrics: true
-          unknownQueueItems: true
+      # prometheusRule:
+      #   enabled: true
+      # exporter:
+      #   image:
+      #     repository: ghcr.io/onedr0p/exportarr
+      #     tag: v1.0.0
+      #   env:
+      #     port: 9794
+      #     additionalMetrics: true
+      #     unknownQueueItems: true
     persistence:
       config:
         enabled: true
