debug: recover cluster

--- a/cluster/apps/home/node-red/helm-release.yaml
+++ b/cluster/apps/home/node-red/helm-release.yaml
@@ -54,7 +54,7 @@ spec:
           - hosts:
               - *host
     persistence:
-      data:
+      config:
         enabled: true
         existingClaim: node-red-config-v1
         mountPath: "/data"
