--- a/cluster/apps/media/radarr/helm-release.yaml
+++ b/cluster/apps/media/radarr/helm-release.yaml
@@ -43,21 +43,21 @@ spec:
     podSecurityContext:
       supplementalGroups:
         - 100
-    metrics:
-      enabled: true
-      serviceMonitor:
-        interval: 5m
-        scrapeTimeout: 1m
-      prometheusRule:
-        enabled: false
-      # exporter:
-      #   image:
-      #     repository: ghcr.io/onedr0p/exportarr
-      #     tag: v1.0.0
-      #   env:
-      #     port: 9794
-      #     additionalMetrics: true
-      #     unknownQueueItems: true
+    # metrics:
+    #   enabled: true
+    #   serviceMonitor:
+    #     interval: 5m
+    #     scrapeTimeout: 1m
+    #   prometheusRule:
+    #     enabled: false
+    #   exporter:
+    #     image:
+    #       repository: ghcr.io/onedr0p/exportarr
+    #       tag: v1.0.0
+    #     env:
+    #       port: 9794
+    #       additionalMetrics: true
+    #       unknownQueueItems: true
     persistence:
       config:
         enabled: true
