--- a/cluster/apps/media/qbittorrent/helm-release.yaml
+++ b/cluster/apps/media/qbittorrent/helm-release.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: qbittorrent
-      version: 13.4.2
+      version: 13.2.0
       sourceRef:
         kind: HelmRepository
         name: k8s-at-home-charts
@@ -63,17 +63,17 @@ spec:
         tls:
           - hosts:
               - *host
-    # metrics:
-    #   enabled: true
-    #   exporter:
-    #     image:
-    #       repository: ghcr.io/k8s-at-home/prometheus-qbittorrent-exporter
-    #       tag: v1.2.0
-    #   serviceMonitor:
-    #     interval: 1m
-    #     scrapeTimeout: 10s
-    #   prometheusRule:
-    #     enabled: true
+    metrics:
+      enabled: true
+      exporter:
+        image:
+          repository: ghcr.io/k8s-at-home/prometheus-qbittorrent-exporter
+          tag: v1.2.0
+      serviceMonitor:
+        interval: 1m
+        scrapeTimeout: 10s
+      prometheusRule:
+        enabled: true
     podSecurityContext:
       supplementalGroups:
         - 100
