--- a/cluster/apps/media/unpackerr/helm-release.yaml
+++ b/cluster/apps/media/unpackerr/helm-release.yaml
@@ -53,11 +53,11 @@ spec:
     persistence:
       config:
         enabled: false
-      complete:
+      downloads:
         enabled: true
         type: hostPath
         hostPath: /mnt/media/sabnzbd/complete
-        mountPath: /complete
+        mountPath: /downloads
     podAnnotations:
       secret.reloader.stakater.com/reload: *app
     resources:
