--- a/cluster/apps/media/tautulli/helm-release.yaml
+++ b/cluster/apps/media/tautulli/helm-release.yaml
@@ -45,6 +45,7 @@ spec:
     persistence:
       config:
         enabled: true
+        type: pvc
         existingClaim: tautulli-config-v1
     #   backup:
     #     enabled: true
