--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -2,18 +2,18 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # - lidarr
+  - lidarr
   - media-browser
   - overseerr
-  # - plex
-  # - prowlarr
-  # - qbittorrent
-  # - radarr
-  # - radarr-uhd
-  # - readarr
-  # - sabnzbd
-  # - sonarr
-  # - sonarr-uhd
+  - plex
+  - prowlarr
+  - qbittorrent
+  - radarr
+  - radarr-uhd
+  - readarr
+  - sabnzbd
+  - sonarr
+  - sonarr-uhd
   - tautulli
   - trash-updater
   - unpackerr
