--- a/cluster/apps/media/plex/helm-release.yaml
+++ b/cluster/apps/media/plex/helm-release.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: plex
-      version: 6.2.0
+      version: 6.3.1
       sourceRef:
         kind: HelmRepository
         name: k8s-at-home-charts
@@ -20,7 +20,7 @@ spec:
   values:
     image:
       repository: ghcr.io/k8s-at-home/plex
-      tag: v1.25.9.5721-965587f64
+      tag: v1.26.0.5715-8cf78dab3
     env:
       TZ: "${TIMEZONE}"
     podSecurityContext:
@@ -84,11 +84,11 @@ spec:
     #                 - "true"
     podAnnotations:
       configmap.reloader.stakater.com/reload: "plex-promtail"
-    # resources:
-    #   requests:
-    #     gpu.intel.com/i915: 1
-    #     cpu: 1000m
-    #     memory: 1000Mi
-    #   limits:
-    #     gpu.intel.com/i915: 1
-    #     memory: 16000Mi
+    resources:
+      requests:
+        # gpu.intel.com/i915: 1
+        cpu: 1000m
+        memory: 1000Mi
+      limits:
+        # gpu.intel.com/i915: 1
+        memory: 16000Mi
