--- a/cluster/apps/media/tautulli/helm-release.yaml
+++ b/cluster/apps/media/tautulli/helm-release.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: tautulli
-      version: 11.2.0
+      version: 11.3.1
       sourceRef:
         kind: HelmRepository
         name: k8s-at-home-charts
@@ -20,7 +20,7 @@ spec:
   values:
     image:
       repository: ghcr.io/k8s-at-home/tautulli
-      tag: v2.7.7
+      tag: v2.9.7
     env:
       TZ: "${TIMEZONE}"
     ingress:
@@ -46,12 +46,12 @@ spec:
       config:
         enabled: true
         existingClaim: tautulli-config-v1
-    #   backup:
-    #     enabled: true
-    #     type: hostPath
-    #     hostPath: /mnt/media/backups/tautilli
-    #     mountPath: /config/Backups
-    #     readOnly: false
+      backup:
+        enabled: true
+        type: hostPath
+        hostPath: /mnt/media/backups/tautilli
+        mountPath: /config/Backups
+        readOnly: false
     resources:
       requests:
         memory: 250Mi
