--- a/cluster/core/kustomization.yaml
+++ b/cluster/core/kustomization.yaml
@@ -2,8 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - cert-manager
-  - kyverno
   - namespaces
+  - cert-manager
   - rook-ceph
-  - starboard-system
+  - system-upgrade
