--- a/cluster/crds/kustomization.yaml
+++ b/cluster/crds/kustomization.yaml
@@ -5,8 +5,5 @@ resources:
   - cert-manager
   - external-snapshotter
   - kube-prometheus-stack
-  - kyverno
-  - system-upgrade-controller
-  - starboard
-  # TODO(rook-ceph): Enable CRDs on next rebuild
+  # TODO: [rook-ceph] Enable CRDs on next rebuild
   - rook-ceph
