debug: recover cluster

--- a/cluster/core/rook-ceph/operator/kustomization.yaml
+++ b/cluster/core/rook-ceph/operator/kustomization.yaml
@@ -6,6 +6,6 @@ resources:
   - configmap.sops.yaml
   - secret.sops.yaml
   - cluster-external.yaml
-  - cephfs.yaml
+  # - cephfs.yaml
   - storageclass.yaml
   - volume-snapshot-class.yaml
