debug: re-enable home and kasten

--- a/cluster/apps/networking/echo-server/helm-release.yaml
+++ b/cluster/apps/networking/echo-server/helm-release.yaml
@@ -77,13 +77,13 @@ spec:
         tls:
           - hosts:
               - *host
-    topologySpreadConstraints:
-      - maxSkew: 1
-        topologyKey: kubernetes.io/hostname
-        whenUnsatisfiable: DoNotSchedule
-        labelSelector:
-          matchLabels:
-            app.kubernetes.io/name: *app
+    # topologySpreadConstraints:
+    #   - maxSkew: 1
+    #     topologyKey: kubernetes.io/hostname
+    #     whenUnsatisfiable: DoNotSchedule
+    #     labelSelector:
+    #       matchLabels:
+    #         app.kubernetes.io/name: *app
     resources:
       requests:
         cpu: 10m
