--- a/.github/renovate/autoMerge.json5
+++ b/.github/renovate/autoMerge.json5
@@ -18,6 +18,7 @@
       "matchPackageNames": [
         "ghcr.io/k8s-at-home/prowlarr-nightly",
         "lycheeverse/lychee-action",
+        "minio",
         "renovatebot/github-action"
       ]
     }
