chore: match upstream

--- a/.sourceignore
+++ b/.sourceignore
@@ -1,10 +1,10 @@
 # See https://toolkit.fluxcd.io/components/source/gitrepositories/#excluding-files
-
 .github/
 .taskfiles/
 .vscode/
 ansible/
 hack/
+kubernetes/
 terraform/
 .envrc
 .gitattributes
