--- a/cluster/base/flux-system/charts/helm/descheduler-charts.yaml
+++ b/cluster/base/flux-system/charts/helm/descheduler-charts.yaml
@@ -2,9 +2,9 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: descheduler-charts
+  name: descheduler
   namespace: flux-system
 spec:
-  interval: 15m
+  interval: 1h
   url: https://kubernetes-sigs.github.io/descheduler
   timeout: 3m
