--- a/cluster/apps/home/teslamate/helm-release.yaml
+++ b/cluster/apps/home/teslamate/helm-release.yaml
@@ -24,7 +24,7 @@ spec:
     env:
       TZ: "${TIMEZONE}"
       DATABASE_HOST: '{{ include "common.names.fullname" .}}-postgresql'
-      # DATABASE_USER: "{{ .Values.postgresql.postgresUsername }}"
+      DATABASE_USER: "postgres"
       DATABASE_PASS: "{{ .Values.postgresql.auth.postgresPassword }}"
       DATABASE_NAME: "{{ .Values.postgresql.auth.database }}"
       MQTT_HOST: "mosquitto.home"
