fix: common chart naming change

--- a/cluster/apps/home/teslamate/helm-release.yaml
+++ b/cluster/apps/home/teslamate/helm-release.yaml
@@ -72,3 +72,5 @@ spec:
         persistence:
           enabled: true
           existingClaim: teslamate-db-v1
+      image:
+        tag: postgres:11.16
