--- a/cluster/apps/home/teslamate/helm-release.yaml
+++ b/cluster/apps/home/teslamate/helm-release.yaml
@@ -73,4 +73,4 @@ spec:
           enabled: true
           existingClaim: teslamate-db-v1
       image:
-        tag: "postgres:11.16"
+        tag: "11.16"
