chore: update renovate and workflows

--- a/.github/renovate/semanticCommits.json5
+++ b/.github/renovate/semanticCommits.json5
@@ -13,7 +13,7 @@
     },
     {
       "matchDatasources": ["docker"],
-      "matchUpdateTypes": ["patch"],
+      "matchUpdateTypes": ["digest", "patch"],
       "semanticCommitType": "fix",
       "semanticCommitScope": "container"
     },
