--- a/.github/renovate/commitMessage.json5
+++ b/.github/renovate/commitMessage.json5
@@ -1,15 +1,15 @@
 {
-    "commitMessageTopic": "{{depName}}",
-    "commitMessageExtra": "to {{newVersion}}",
-    "commitMessageSuffix": "",
-    "packageRules": [
-      {
-        "matchDatasources": ["helm"],
-        "commitMessageTopic": "Chart {{depName}}"
-      },
-      {
-        "matchDatasources": ["docker"],
-        "commitMessageTopic": "Image {{depName}}"
-      }
-    ]
-  }
+  "commitMessageTopic": "{{depName}}",
+  "commitMessageExtra": "to {{newVersion}}",
+  "commitMessageSuffix": "",
+  "packageRules": [
+    {
+      "matchDatasources": ["helm"],
+      "commitMessageTopic": "chart {{depName}}"
+    },
+    {
+      "matchDatasources": ["docker"],
+      "commitMessageTopic": "image {{depName}}"
+    }
+  ]
+}
