chore: cleanup, cleanup

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -12,9 +12,9 @@ env:
 includes:
   ansible: .taskfiles/AnsibleTasks.yml
   cluster: .taskfiles/ClusterTasks.yml
-  format: .taskfiles/FormatTasks.yml
-  linter: .taskfiles/LintTasks.yml
+  debug: .taskfiles/DebugTasks.yml
   precommit: .taskfiles/PreCommitTasks.yml
+  snapshot: .taskfiles/SnapshotTasks.yml
   terraform: .taskfiles/TerraformTasks.yml
 
 tasks:
