--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -26,6 +26,7 @@ stringData:
     SECRET_TESLAMATE_DB_PASS: ENC[AES256_GCM,data:Jo2zYCMwA3Q7Io65pgkKJ2h+UWc=,iv:y3mFh4VW19RaLgB7NOtzP99erFKB9JPZd/SOzAX0FWc=,tag:+DNEOxUXcq4xWVayN0rIvQ==,type:str]
     SECRET_TESLAMATE_DB_USER: ENC[AES256_GCM,data:hk1bt7sNr2s=,iv:f8ii0Wce555BL3+TGUjQySQLafIAPzlRmxhd4ptCD8w=,tag:JZMp72YgsR6hXJN9M78VNg==,type:str]
     SECRET_TESLAMATE_DB: ENC[AES256_GCM,data:mfj4fykKzEiB,iv:DMpGVcKTnfB6IbPCecE8OsBdzDmyjQnGZBI+7Vgicac=,tag:70eXceZsvwM477McUxrj1A==,type:str]
+    SECRET_TESLAMATE_ENCRYPTION_KEY: ENC[AES256_GCM,data:ww31T3TcrsnNhkuIGyBKJXh1Chv+FGZ4vOkBBimsgvzkQsJcFnw82WKjFk1WFFAbrgfJHZPDbsyfH8h3AE7aEg==,iv:WMgKiqOQEYB9gt9ej0oHZp4GfAq6GaKqLWOkAT0ybaA=,tag:7NDDV+SX3vVZ5IApG0LnLA==,type:str]
     SECRET_TESLAMATE_MQTT_PASSWORD: ENC[AES256_GCM,data:4GOCLUq6c11Q1oqp3qv7CJp2w/g=,iv:CzjUs5UPaKqkvnZAJAj4DzpeDbI6tFSBU/OYOMYhGDU=,tag:TT9ii7VZ8/nvQianOLhlgQ==,type:str]
     SECRET_TESLAMATE_MQTT_USERNAME: ENC[AES256_GCM,data:XzNdlwy0NefM,iv:aeKS1fEVED2BA72+85/r9hg+pvBcRkFcUQE2z5mQPOk=,tag:A/B1ARrUsgypRft94F1Anw==,type:str]
     SECRET_UNIFI_DOMAIN: ENC[AES256_GCM,data:JIA388qNJDBwmU4167c2TWQu3A==,iv:FmXpzQe82wYJmU+SuTUENHmOCnHXP2SyCME1DyOaZa4=,tag:DO5FL61+0WNjyWAEhdX/bA==,type:str]
@@ -51,8 +52,8 @@ sops:
             bEthME45cnI4MGdEZ2VYRlk3aU1qdjgKUnHIHQSP3gi1jJK9bnKrXzc97dsDtisN
             HgRS5n9Eau1vrjuqsQd49Fypgys2zXpYsd+60kkxv/VTKZm9tWjkKA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-06T20:05:27Z"
-    mac: ENC[AES256_GCM,data:EJORf6yyaXTFtcmLjB9p7neVgwnkv3GeCNyCxXQUReaX5X3euXi8AyGhTOzQ6zKCDc3nbka1dwfjAhIwPa62qSw0koFBBwmiKjM8K3VYMmFqOG7gZ59WqRWMH5asJgY1DnD7rNK6ci8Uaitl/zwR6aNJjPBc7E7jp3iCtKB/GIU=,iv:1xXXgrrALctYnTIzFlv+3nJz1ByAQMSg03EKPWarJAA=,tag:fJ5hgGBOS2xenPrAL6VksA==,type:str]
+    lastmodified: "2022-08-06T14:54:35Z"
+    mac: ENC[AES256_GCM,data:vpTfy3l8u0+IhOpShLn3kVblGVyduBRANbTh1jhqdh+CN9buhvtiDj3wsWCv523/U5BOKT1GaH0MIixBoGT8C7cw1RkkT+yxitbyYq+MP5cmzcY7MQJ+Bmn444eIXzaoVNKhbFm9wMIC4w+ELLNOvc1fXjrXX7mp95ewnEs8Qjk=,iv:iWurpnFUITuXY+AqvTrWJFvEEULRwGRPeSRE1Yr2fp0=,tag:+WaDKaK0cZLtY52DdqsjGg==,type:str]
     pgp:
         - created_at: "2022-03-21T15:38:08Z"
           enc: |
@@ -75,4 +76,4 @@ sops:
             -----END PGP MESSAGE-----
           fp: B3BB654B6CAAA312F49C37DF9CEFDEA122154047
     encrypted_regex: ^(data|stringData)$
-    version: 3.7.2
+    version: 3.7.3
