--- a/cluster/apps/monitoring/kustomization.yaml
+++ b/cluster/apps/monitoring/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - grafana
   - kube-prometheus-stack
   - loki
-  - node-problem-detector
+  # - node-problem-detector
   - thanos
   - unifi-poller
   # - uptimerobot-heartbeat
