--- a/cluster/apps/monitoring/kustomization.yaml
+++ b/cluster/apps/monitoring/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - kube-prometheus-stack
   - loki
   # - node-problem-detector
-  - thanos
+  # - thanos
   - unifi-poller
   # - uptimerobot-heartbeat
   - vector
